--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
     <!-- Main Content Body -->
-    <div class="flex flex-col items-center py-20 w-[1120px] mx-auto mt-[104px] bg-bgPutih">
+    <div class="container px-0 flex flex-col items-center py-20 w-[1120px] mx-auto mt-[104px] bg-bgPutih">
       <!-- tagline -->
       <h1 class="font-semibold text-3xl text-center">Upload SHP jadi WebGIS<br>se-simpel upload<br>konten di sosmed</h1>
       <!-- mockup multiplatform -->
