--- a/index.html
+++ b/index.html
@@ -9,10 +9,89 @@
   <body class="bg-White">    
     <div id="app">
       <!-- Menu Header -->
+        <header class="fixed top-0 left-0 right-0 bg-bgPutih flex justify-between items-center py-6 md:px-20 px-6 shadow-lg">
+          <!-- Logo Plannio -->
+        <div id="logo-plannio" href="/" data-link>
+          <img class="w-56 h-14" src="images/logo-plannio.svg" alt="">
+        </div>
+        <!-- Menu items -->
+        <div id="navbar" class="hidden lg:block">
+          <a href="#" class="menu-item mx-7 font-semibold">Community</a>
+          <a href="#" class="menu-item mx-7 font-semibold">Pricing</a>
+          <a href="https://geokatalis.com/" class="menu-item mx-7 font-semibold" target="_blank">Geokatalis V</a>
+        </div>
+        <!-- Log-in and Signup -->
+        <div class="flex flex-col sm:flex-row justify-center items-center font-semibold text-base">
+          <a href="/beranda" data-link class="mx-3">Log In</a>
+          <button class="mx-3 bg-solidBiru py-1 px-6 rounded-full shadow-xl" href="/" data-link>Try for free</button>
+        </div>
+        </header>
+        <!-- Main Content Body -->
+        <div class="px-0 mb-48 flex flex-col gap-[40px] items-center py-20 max-w-[1120px] mx-auto mt-[104px] bg-bgPutih">
+          <!-- tagline -->
+          <h1 class="font-semibold text-3xl text-center">Upload SHP jadi WebGIS<br>se-simpel upload<br>konten di sosmed</h1>
+          <!-- mockup multiplatform -->
+          <div>
+            <img class="max-w-3xl w-full" src="images/mockup.png" alt="mockup">
+          </div>
+          <!-- Fitur-fitur plannio -->
+          <div class="flex flex-col lg:flex-row gap-8 px-10">        
+            <!-- fitur1 -->
+            <div class="container flex-col py-10 items-center justify-center">
+              <img class="object-fill mx-auto my-1.5 max-h-[400px] pb-4" src="images/fitur1.png" alt="gambar1">
+              <h3 class="my-1.5 text-2xl font-semibold text-left">
+                Beragam Style Basemap
+              </h3>
+              <p class="my-1.5 font-opensans font-light text-sm text-justify">
+                Setiap peta di PLANNIO dilengkapi dua tampilan tema peta dasar, yaitu tema cerah (bright) dan tema gelap (satellite). Data peta dasar mutakhir, melihat peta manapun di PLANNIO dengan tampalan foto satelit resolusi tinggi dari berbagai sumber.
+              </p>
+            </div>
+            <!-- fitur2 -->
+            <div class="container flex-col py-10 items-center justify-center">
+              <img class="object-fill mx-auto my-1.5 max-h-[400px] pb-4" src="images/fitur2.png" alt="gambar2">
+              <h3 class="my-1.5 text-2xl font-semibold text-left">
+                Topografi Tiga Dimensi (3D)
+              </h3>
+              <p class="my-1.5 font-opensans font-light text-sm text-justify">
+                Web aplikasi PLANNIO dapat menampilkan seluruh peta yang ada dengan topografi tampak tiga dimensi (3D) yang memudahkan dalam observasi ketinggian tempat dari tiap tiap bagian yang ada pada peta.
+              </p>
+            </div>
+            <!-- fitur3 -->
+            <div class="container flex-col py-10 items-center justify-center">
+              <img class="object-fill mx-auto my-1.5 max-h-[400px] pb-4" src="images/fitur3.png" alt="gambar1">
+              <h3 class="my-1.5 text-2xl font-semibold text-left">
+                Berbagi Peta Multiplatform
+              </h3>
+              <p class="my-1.5 font-opensans font-light text-sm text-justify">
+                Berbagi informasi spasial menjadi sangat mudah dengan PLANNIO. Bagikan informasi spasial teraktual kepada siapa saja di WhatsApp, Facebook, Instagram, Twitter, LinkedIn, dan lain-lain
+              </p>
+            </div>
+          </div>      
+        </div>
+
+        <!-- Footer -->
+        <footer class="bg-bgPutih flex flex-col md:flex-row  md:justify-between justify-center items-center py-6 px-20 shadow-lg">
+          <!-- Menu items -->
+          <div id="navbar" class="hidden lg:block">
+            <a href="#" class="menu-item mx-7 font-semibold">Community</a>
+            <a href="#" class="menu-item mx-7 font-semibold">Pricing</a>
+            <a href="https://geokatalis.com/" class="menu-item mx-7 font-semibold" target="_blank">Geokatalis</a>
+          </div>
+          <!-- Logo Plannio -->
+        <div id="logo-geokatalis" class="flex justify-center">
+          <img class="h-14" src="images/logo-geokatalis.png" alt="">
+        </div>
+        <!-- Log-in and Signup -->
+        <div class="font-semibold text-sm flex justify-center">
+          <p>©2024 Geokatalis. All right reserved.</p>
+        </div>
+        </footer>
+        <div class="hidden">
+          <!-- Menu Header -->
         <header class="fixed top-0 left-0 right-0 bg-white flex justify-between items-center py-2 md:px-3 px-6 shadow-md">
           <!-- Logo Plannio -->
           <div id="logo-plannio" href="/" data-link>
-            <img class="w-[121px] h-[30px]" src='./images/logo-plannio.svg' alt="">
+            <img class="w-[121px] h-[30px]" src=${logoPlannio} alt="">
           </div>
 
           <!-- Nav Container -->
@@ -20,12 +99,12 @@
             <!-- Nav Menu       -->
             <div class="flex nav-menu p-0 gap-8">            
               <button href="/" data-link class="font-medium text-base text-solidDarkAbu hover:text-solidBiru duration-200"> HOME </button>
-              <button href="/" data-link class="font-medium text-base text-solidDarkAbu  hover:text-solidBiru duration-200"> My Geoportal </button>
+              <button class="font-medium text-base text-solidDarkAbu  hover:text-solidBiru duration-200"> My Geoportal </button>
             </div>
             <!-- Billing and Profile -->
             <div class="flex p-0 gap-8">            
-              <button href="/" data-link class="font-medium text-base text-solidDarkAbu hover:text-solidBiru duration-200"> Billing </button>
-              <button href="/" data-link class="flex py-1 px-2 gap-2 items-center font-medium text-base text-solidDarkAbu  hover:text-solidBiru duration-200"> Abdul Manaf <img src="./images/user-icon.png" alt="" class="h-6 w-6"> </button>
+              <button class="font-medium text-base text-solidDarkAbu hover:text-solidBiru duration-200"> Billing </button>
+              <button class="flex py-1 px-2 gap-2 items-center font-medium text-base text-solidDarkAbu  hover:text-solidBiru duration-200"> Abdul Manaf <img src="./images/user-icon.png" alt="" class="h-6 w-6"> </button>
             </div>
           </div>
         </header>
@@ -33,7 +112,7 @@
        <div id="bodycontent" class="flex w-full pt-16 px-6 gap-4">
           <!-- Side Menu -->
            <div class="flex flex-col items-center gap-6 w-[202px]">           
-            <button class="btnHijau mx-">Make a Map</button>            
+            <button class="btnHijau">Make a Map</button>            
             <button class="btnBiru w-full">Explore Maps</button>
             <button class="btnBiru w-full">Followed</button>
             <button class="btnBiru w-full">Notifications</button>
@@ -45,12 +124,12 @@
               <div class="flex flex-col px-5 py-4 gap-3 rounded-lg bg-bgAbu w-full max-w-[1120px]">
                 <!-- profile -->
                 <div class="flex items-center gap-2">
-                  <img class="w-14 h-14 object-center" src="./images/user1.png" alt="">
-                  <h3 class="font-semibold text-base">Andi Abdul Manaf</h3>
+                  <img class="w-14 h-14 object-center" src=${userone} alt="">
+                  <h3 class="font-bold text-base">Andi Abdul Manaf</h3>
                 </div>
                 <!-- Content Links and Status -->
                  <div class="flex gap-6">
-                  <img class="h-24 w-44 rounded-md" src="images/map-thumbnail.png" alt="">
+                  <img class="h-24 w-44 rounded-md" src=${mapThumbnail} alt="">
                   <!-- Map Status -->
                    <div class="flex flex-col items-start">
                      <p class="font-semibold py-1 px-5 rounded-full text-sm text-solidHijau bg-bgHijau">Map</p>
@@ -61,27 +140,25 @@
                  <!-- Content Engage -->
                   <div class="flex w-full border-y border-solidAbu h-12 px-28 justify-between">
                     <!-- likes -->
-                     <button class="flex items-center gap-1 text-sm font-semibold text-solidAbu">
-                      <img src="images/likes.svg" alt="">
+                     <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                      <img src=${like} alt="">
                       20 Likes
                      </button>
                      <!-- Comments -->
-                     <button class="flex items-center gap-1 text-sm font-semibold text-solidAbu">
-                      <img src="images/comments.svg" alt="">
+                     <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                      <img src${comments} alt="">
                       4 Comments
                      </button>
                      <!-- Share -->
-                     <button class="flex items-center gap-1 text-sm font-semibold text-solidAbu">
-                      <img src="images/share.svg" alt="">
+                     <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                      <img src=${share} alt="">
                       Share
                      </button>
                   </div>
-
               </div>
            </div>
        </div>
-      
-
+        </div>
     </div>
     <script type="module" src="./src/main.js"></script>
 </body>
