dapat cara animation slide in

--- a/pages/beranda.html
+++ b/pages/beranda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>    
     <script>
         tailwind.config = {
           theme: {
@@ -56,13 +56,23 @@
                 .btnInactive {
                     @apply font-semibold py-1 px-6 rounded-full text-base text-briAbu bg-bgAbu cursor-not-allowed duration-300;
                     }
+
+                .animate-fade-slide {
+                    opacity: 0;
+                    transform: translateY(220px);
+                    transition: opacity 1000ms, transform 1000ms;
+                    }
+                .slide-up {
+                    transform: translateY(0);
+                    opacity: 1;
+                    }
                             }
           </style>
-          <link rel="stylesheet" href="../src/style.css">
+    <link rel="stylesheet" href="../src/style.css">
 </head>
 <body>
     <!-- Menu Header -->
-<header class="fixed top-0 left-0 right-0 bg-white flex justify-between items-center py-2 md:px-3 px-6 shadow-md">
+<header class="fixed top-0 left-0 right-0 bg-white flex justify-between items-center py-2 md:px-3 px-6 shadow-md z-10">
     <!-- Logo Plannio -->
     <div id="logo-plannio" href="/" data-link>
       <img class="w-[121px] h-[30px]" src="../images/logo-plannio.svg" alt="">
@@ -93,7 +103,10 @@
       <button class="btnBiru w-full">Messages</button>            
      </div>
     <!-- Content Beranda -->
-     <div class="flex flex-col w-full items-center">
+     <div class="flex flex-col w-full items-center gap-6">
+      <!-- Konten Map -->
+      <div class="animate-fade-slide">
+        <!-- Your content here -->
         <!-- Content Item -->
         <div class="flex flex-col px-5 py-4 gap-3 rounded-lg bg-bgAbu w-full max-w-[1120px]">
           <!-- profile -->
@@ -129,8 +142,319 @@
                 Share
                </button>
             </div>
-        </div>
+        </div>        
+      </div>
+
+      <!-- Konten Map -->
+      <div class="animate-fade-slide">
+        <!-- Your content here -->
+        <!-- Content Item -->
+        <div class="flex flex-col px-5 py-4 gap-3 rounded-lg bg-bgAbu w-full max-w-[1120px]">
+          <!-- profile -->
+          <div class="flex items-center gap-2">
+            <img class="w-14 h-14 object-center" src="../images/user1.png" alt="">
+            <h3 class="font-bold text-base">Andi Abdul Manaf</h3>
+          </div>
+          <!-- Content Links and Status -->
+           <div class="flex gap-6">
+            <img class="h-24 w-44 rounded-md" src="../images/map-thumbnail.png" alt="">
+            <!-- Map Status -->
+             <div class="flex flex-col items-start">
+               <p class="font-semibold py-1 px-5 rounded-full text-sm text-solidHijau bg-bgHijau">Map</p>
+               <h2 class="font-bold text-lg">Peta rencana Tata Ruang Kabupaten Manggarai Barat</h2>
+               <p class="font-opensans text-solidDarkAbu text-xs">Last Updated :2 months ago</p>
+             </div>
+           </div>
+           <!-- Content Engage -->
+            <div class="flex w-full border-y border-solidAbu h-12 px-28 justify-between">
+              <!-- likes -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/likes.svg" alt="">
+                20 Likes
+               </button>
+               <!-- Comments -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/comments.svg" alt="">
+                4 Comments
+               </button>
+               <!-- Share -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/share.svg" alt="">
+                Share
+               </button>
+            </div>
+        </div>        
+      </div>
+
+      <!-- Konten Map -->
+      <div class="animate-fade-slide">
+        <!-- Your content here -->
+        <!-- Content Item -->
+        <div class="flex flex-col px-5 py-4 gap-3 rounded-lg bg-bgAbu w-full max-w-[1120px]">
+          <!-- profile -->
+          <div class="flex items-center gap-2">
+            <img class="w-14 h-14 object-center" src="../images/user1.png" alt="">
+            <h3 class="font-bold text-base">Andi Abdul Manaf</h3>
+          </div>
+          <!-- Content Links and Status -->
+           <div class="flex gap-6">
+            <img class="h-24 w-44 rounded-md" src="../images/map-thumbnail.png" alt="">
+            <!-- Map Status -->
+             <div class="flex flex-col items-start">
+               <p class="font-semibold py-1 px-5 rounded-full text-sm text-solidHijau bg-bgHijau">Map</p>
+               <h2 class="font-bold text-lg">Peta rencana Tata Ruang Kabupaten Manggarai Barat</h2>
+               <p class="font-opensans text-solidDarkAbu text-xs">Last Updated :2 months ago</p>
+             </div>
+           </div>
+           <!-- Content Engage -->
+            <div class="flex w-full border-y border-solidAbu h-12 px-28 justify-between">
+              <!-- likes -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/likes.svg" alt="">
+                20 Likes
+               </button>
+               <!-- Comments -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/comments.svg" alt="">
+                4 Comments
+               </button>
+               <!-- Share -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/share.svg" alt="">
+                Share
+               </button>
+            </div>
+        </div>        
+      </div>
+
+      <!-- Konten Map -->
+      <div class="animate-fade-slide">
+        <!-- Your content here -->
+        <!-- Content Item -->
+        <div class="flex flex-col px-5 py-4 gap-3 rounded-lg bg-bgAbu w-full max-w-[1120px]">
+          <!-- profile -->
+          <div class="flex items-center gap-2">
+            <img class="w-14 h-14 object-center" src="../images/user1.png" alt="">
+            <h3 class="font-bold text-base">Andi Abdul Manaf</h3>
+          </div>
+          <!-- Content Links and Status -->
+           <div class="flex gap-6">
+            <img class="h-24 w-44 rounded-md" src="../images/map-thumbnail.png" alt="">
+            <!-- Map Status -->
+             <div class="flex flex-col items-start">
+               <p class="font-semibold py-1 px-5 rounded-full text-sm text-solidHijau bg-bgHijau">Map</p>
+               <h2 class="font-bold text-lg">Peta rencana Tata Ruang Kabupaten Manggarai Barat</h2>
+               <p class="font-opensans text-solidDarkAbu text-xs">Last Updated :2 months ago</p>
+             </div>
+           </div>
+           <!-- Content Engage -->
+            <div class="flex w-full border-y border-solidAbu h-12 px-28 justify-between">
+              <!-- likes -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/likes.svg" alt="">
+                20 Likes
+               </button>
+               <!-- Comments -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/comments.svg" alt="">
+                4 Comments
+               </button>
+               <!-- Share -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/share.svg" alt="">
+                Share
+               </button>
+            </div>
+        </div>        
+      </div>
+
+      <!-- Konten Map -->
+      <div class="animate-fade-slide">
+        <!-- Your content here -->
+        <!-- Content Item -->
+        <div class="flex flex-col px-5 py-4 gap-3 rounded-lg bg-bgAbu w-full max-w-[1120px]">
+          <!-- profile -->
+          <div class="flex items-center gap-2">
+            <img class="w-14 h-14 object-center" src="../images/user1.png" alt="">
+            <h3 class="font-bold text-base">Andi Abdul Manaf</h3>
+          </div>
+          <!-- Content Links and Status -->
+           <div class="flex gap-6">
+            <img class="h-24 w-44 rounded-md" src="../images/map-thumbnail.png" alt="">
+            <!-- Map Status -->
+             <div class="flex flex-col items-start">
+               <p class="font-semibold py-1 px-5 rounded-full text-sm text-solidHijau bg-bgHijau">Map</p>
+               <h2 class="font-bold text-lg">Peta rencana Tata Ruang Kabupaten Manggarai Barat</h2>
+               <p class="font-opensans text-solidDarkAbu text-xs">Last Updated :2 months ago</p>
+             </div>
+           </div>
+           <!-- Content Engage -->
+            <div class="flex w-full border-y border-solidAbu h-12 px-28 justify-between">
+              <!-- likes -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/likes.svg" alt="">
+                20 Likes
+               </button>
+               <!-- Comments -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/comments.svg" alt="">
+                4 Comments
+               </button>
+               <!-- Share -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/share.svg" alt="">
+                Share
+               </button>
+            </div>
+        </div>        
+      </div>
+
+      <!-- Konten Map -->
+      <div class="animate-fade-slide">
+        <!-- Your content here -->
+        <!-- Content Item -->
+        <div class="flex flex-col px-5 py-4 gap-3 rounded-lg bg-bgAbu w-full max-w-[1120px]">
+          <!-- profile -->
+          <div class="flex items-center gap-2">
+            <img class="w-14 h-14 object-center" src="../images/user1.png" alt="">
+            <h3 class="font-bold text-base">Andi Abdul Manaf</h3>
+          </div>
+          <!-- Content Links and Status -->
+           <div class="flex gap-6">
+            <img class="h-24 w-44 rounded-md" src="../images/map-thumbnail.png" alt="">
+            <!-- Map Status -->
+             <div class="flex flex-col items-start">
+               <p class="font-semibold py-1 px-5 rounded-full text-sm text-solidHijau bg-bgHijau">Map</p>
+               <h2 class="font-bold text-lg">Peta rencana Tata Ruang Kabupaten Manggarai Barat</h2>
+               <p class="font-opensans text-solidDarkAbu text-xs">Last Updated :2 months ago</p>
+             </div>
+           </div>
+           <!-- Content Engage -->
+            <div class="flex w-full border-y border-solidAbu h-12 px-28 justify-between">
+              <!-- likes -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/likes.svg" alt="">
+                20 Likes
+               </button>
+               <!-- Comments -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/comments.svg" alt="">
+                4 Comments
+               </button>
+               <!-- Share -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/share.svg" alt="">
+                Share
+               </button>
+            </div>
+        </div>        
+      </div>
+
+      <!-- Konten Map -->
+      <div class="animate-fade-slide">
+        <!-- Your content here -->
+        <!-- Content Item -->
+        <div class="flex flex-col px-5 py-4 gap-3 rounded-lg bg-bgAbu w-full max-w-[1120px]">
+          <!-- profile -->
+          <div class="flex items-center gap-2">
+            <img class="w-14 h-14 object-center" src="../images/user1.png" alt="">
+            <h3 class="font-bold text-base">Andi Abdul Manaf</h3>
+          </div>
+          <!-- Content Links and Status -->
+           <div class="flex gap-6">
+            <img class="h-24 w-44 rounded-md" src="../images/map-thumbnail.png" alt="">
+            <!-- Map Status -->
+             <div class="flex flex-col items-start">
+               <p class="font-semibold py-1 px-5 rounded-full text-sm text-solidHijau bg-bgHijau">Map</p>
+               <h2 class="font-bold text-lg">Peta rencana Tata Ruang Kabupaten Manggarai Barat</h2>
+               <p class="font-opensans text-solidDarkAbu text-xs">Last Updated :2 months ago</p>
+             </div>
+           </div>
+           <!-- Content Engage -->
+            <div class="flex w-full border-y border-solidAbu h-12 px-28 justify-between">
+              <!-- likes -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/likes.svg" alt="">
+                20 Likes
+               </button>
+               <!-- Comments -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/comments.svg" alt="">
+                4 Comments
+               </button>
+               <!-- Share -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/share.svg" alt="">
+                Share
+               </button>
+            </div>
+        </div>        
+      </div>
+
+      <!-- Konten Map -->
+      <div class="animate-fade-slide">
+        <!-- Your content here -->
+        <!-- Content Item -->
+        <div class="flex flex-col px-5 py-4 gap-3 rounded-lg bg-bgAbu w-full max-w-[1120px]">
+          <!-- profile -->
+          <div class="flex items-center gap-2">
+            <img class="w-14 h-14 object-center" src="../images/user1.png" alt="">
+            <h3 class="font-bold text-base">Andi Abdul Manaf</h3>
+          </div>
+          <!-- Content Links and Status -->
+           <div class="flex gap-6">
+            <img class="h-24 w-44 rounded-md" src="../images/map-thumbnail.png" alt="">
+            <!-- Map Status -->
+             <div class="flex flex-col items-start">
+               <p class="font-semibold py-1 px-5 rounded-full text-sm text-solidHijau bg-bgHijau">Map</p>
+               <h2 class="font-bold text-lg">Peta rencana Tata Ruang Kabupaten Manggarai Barat</h2>
+               <p class="font-opensans text-solidDarkAbu text-xs">Last Updated :2 months ago</p>
+             </div>
+           </div>
+           <!-- Content Engage -->
+            <div class="flex w-full border-y border-solidAbu h-12 px-28 justify-between">
+              <!-- likes -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/likes.svg" alt="">
+                20 Likes
+               </button>
+               <!-- Comments -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/comments.svg" alt="">
+                4 Comments
+               </button>
+               <!-- Share -->
+               <button class="flex items-center gap-1 text-sm font-bold text-solidAbu">
+                <img src="../images/share.svg" alt="">
+                Share
+               </button>
+            </div>
+        </div>        
+      </div>
      </div>
  </div>
+ <script>
+  document.addEventListener("DOMContentLoaded", function () {
+      const elements = document.querySelectorAll('.animate-fade-slide');
+
+      const observer = new IntersectionObserver((entries, observer) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add("slide-up");
+            observer.unobserve(entry.target);  // Stop observing after the first intersection
+          }
+        });
+      }, { threshold: 0.1 });
+
+      elements.forEach(element => {
+        // Check if the element is already in view when the page loads
+        if (element.getBoundingClientRect().top < window.innerHeight) {
+          element.classList.add("slide-up");
+        } else {
+          observer.observe(element);
+        }
+      });
+    });
+</script>
 </body>
 </html>
